fix alignment issue

--- a/pkg/ui/theme_toggle.css
+++ b/pkg/ui/theme_toggle.css
@@ -14,6 +14,8 @@
   border: none;
   background: 0 0;
   cursor: pointer;
+  display: inline-block;
+  line-height: 0;
 }
 
 .pg-theme-toggle input[type=checkbox] {
